--- a/Game/.godot/editor/editor_layout.cfg
+++ b/Game/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -20,24 +20,24 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 <<<<<<<HEADdock_filesystem_selected_paths=PackedStringArray("res://Enemy.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/Environment/background layers/", "res://Scenes/")
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/menu.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Sprites/", "res://Sprites/Environment/background layers/", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/win_screen.tscn")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn", "res://background.tscn", "res://Scenes/death_screen.tscn", "res://Scenes/Inventory.tscn")
-current_scene="res://Scenes/death_screen.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://Scenes/main_char.tscn", "res://Scenes/ability_1.tscn", "res://UI/pause_menu.tscn", "res://Scenes/menu.tscn", "res://Scenes/options_menu.tscn", "res://Enemy.tscn", "res://Scenes/falling_spikes.tscn", "res://environments.tscn", "res://background.tscn", "res://Scenes/death_screen.tscn", "res://Scenes/Inventory.tscn", "res://Scenes/win_screen.tscn")
+current_scene="res://Scenes/win_screen.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Area2D.gd", "res://Scripts/Character.gd", "res://Scripts/damaging.gd", "res://Scenes/death_screen.gd", "res://Scripts/Enemy.gd", "res://Scripts/global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd"]
+open_scripts=["res://Scripts/Area2D.gd", "res://Scripts/Character.gd", "res://Scenes/Control.gd", "res://Scripts/damaging.gd", "res://Scenes/death_screen.gd", "res://Scripts/Enemy.gd", "res://Scripts/global.gd", "res://healthbar.gd", "res://main.gd", "res://Menu.gd", "res://Magik/options_menu.gd", "res://UI/pause_menu.gd", "res://popup.gd", "res://Popup.gd", "res://Scenes/win_screen.gd"]
 selected_script="res://Scenes/death_screen.gd"
 open_help=[]
 script_split_offset=52
